# intro-to-robotics

./: README.md
drafts/ex2/: improvement_trial.txt
drafts/ex2_drafts/: classic_backup.txt
krembot_ws/: README.md  inflated_map.txt  map.txt  run-unix.sh  scores.txt  ucid=1oO2lb2LuLq4IrZmNMiJurWTotHp_pDye  wget-log
krembot_ws/config/: PRM.argos  ex1.argos  ex2.argos  mixed_controllers.argos  porting_example.argos  program_template.argos  run_away_by_bumpers.argos  run_away_by_bumpers_multiple.argos  sand_timer_test.argos  simple_demo.argos  tournament.argos  tournament_redteam.argos
krembot_ws/config/redteam_backup/: tournament_redteam.argos
krembot_ws/controllers/: CMakeLists.txt  CMakeLists.txt.bak
krembot_ws/controllers/PRM/: backup0910.txt  kdtree.hpp  krembot.ino.cpp  krembot.ino.h  logger.cpp  logger.h
krembot_ws/controllers/PRM/PRM/: krembot.ino.h
krembot_ws/controllers/debug/: CMakeLists.txt
krembot_ws/controllers/ex1/: CMakeLists.txt  krembot.ino.cpp  krembot.ino.h
krembot_ws/controllers/ex2/: krembot.ino.cpp  krembot.ino.h
krembot_ws/controllers/ex4_backups/backup_6.1_2004/foraging_redteam/: krembot.ino.cpp  krembot.ino.h
krembot_ws/controllers/foraging/: krembot.ino.h
krembot_ws/controllers/foraging_0/: CMakeLists.txt  krembot.ino.cpp  krembot.ino.h
krembot_ws/controllers/foraging_1/: CMakeLists.txt  draft_code.txt  krembot.ino.cpp  krembot.ino.h
krembot_ws/controllers/foraging_redteam/: CMakeLists.txt  krembot.ino.cpp  krembot.ino.h
krembot_ws/loop_functions/: CMakeLists.txt
krembot_ws/loop_functions/pos_and_map_loop_functions/: CMakeLists.txt  pos_and_map_loop_functions.cpp  pos_and_map_loop_functions.h  pos_and_map_trajectory_qtuser_functions.cpp  pos_and_map_trajectory_qtuser_functions.h
krembot_ws/loop_functions/tournament_loop_functions/: CMakeLists.txt  tournament_loop_functions.cpp  tournament_loop_functions.h  tournament_qt_user_functions.cpp  tournament_qt_user_functions.h
krembot_ws/loop_functions/trajectory_loop_functions/: trajectory_loop_functions.cpp
krembot_ws/scripts/: checks.sh  ex1.sh  ex2.sh  run-unix.sh  run.sh  tournament_test.sh
reports/: ~$troduction to Robotics - ex2 - Report.docx  ~WRL2752.tmp
reports/ex3_report/: Robotics - ex3 - Report.docx
reports/ex4_reports/: Robotics - ex4 - Blue Team Report.docx  Robotics - ex4 - Red Team Report.docx  ~$botics - ex4 - Red Team Report.docx  ~WRL3240.tmp
submissions/ex1/: Details.txt
submissions/ex1/krembot_ws/: README.md
submissions/ex1/krembot_ws/config/: porting_example.argos  run_away_by_bumpers_multiple.argos  sand_timer_test.argos
submissions/ex1/krembot_ws/scripts/: checks.sh  run.sh
submissions/ex2/controllers/: CMakeLists.txt
submissions/ex2/controllers/ex1/: CMakeLists.txt
(+30 files in other folders)
